ROC-8035: Fix tests